notify error when search null

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,12 @@
   border-radius: 100%;
   margin: 0 auto;
 }
+
+.text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+          line-clamp: 2; 
+  -webkit-box-orient: vertical;
+}
