--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,16 @@
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-line-clamp: 2; 
           line-clamp: 2; 
+  -webkit-box-orient: vertical;
+}
+
+.text-mobile {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; 
+          line-clamp: 1; 
   -webkit-box-orient: vertical;
 }
